# host-health-checker

./: .gitignore  README.md  config.example.toml  pyproject.toml
deploy/: host-monitor.cron  host-monitor.service  host-monitor.timer  install.sh
host_monitor/: __init__.py  __main__.py  approval.py  config.py  models.py  report.py  snapshot.py  state.py
host_monitor/checks/: __init__.py  docker.py  host.py  processes.py
tests/: test_approval.py  test_processes.py  test_report.py
